--- a/index.html
+++ b/index.html
@@ -1,95 +1,218 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <title>Mac UI Notepad</title>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-    <title>Mac UI Notepad</title>
-    <script type="text/javascript" src="script.js"></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/html2canvas@1.0.0-rc.5/dist/html2canvas.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/canvas2image@1.0.5/canvas2image.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/canvas2image@1.0.5/canvas2image.js"></script>
-
+    <script>
+        function strip(html) {
+        var tempDiv = document.createElement("DIV");
+        tempDiv.innerHTML = html;
+        return tempDiv.innerText;
+        }
+        function myFunction() {
+            document.getElementById("code").contentEditable = true;
+        }
+        function myFunction2() {
+            document.getElementById("date").contentEditable = true;
+        }
+        function myFunction3() {
+            document.getElementById("title").contentEditable = true;
+        }
+        /*function takeshot(){
+            html2canvas(document.getElementById("container-back")).then(function(canvas){
+                return Canvas2Image.saveAsPNG(canvas)
+        })
+        }*/
+    </script>
+    <style>
+        *{
+            margin : 0;
+            padding : 0;
+        }
+        a{
+            text-decoration: none;
+            
+        }
+        ul#more li {
+            margin-bottom: 21px;
+            list-style-type: none;
+        }
+        ::-webkit-scrollbar {
+            width: 5px;
+        }
+        ::-webkit-scrollbar-thumb {
+            background: #e6e6e6; 
+            border-radius: 5px;
+        }
+        ::-webkit-scrollbar-thumb:hover {
+            background: rgb(184, 181, 48);
+        }
+        #red{
+            background-color: red ;
+            height: 13px;
+            width: 13px;
+            border-radius: 50%;
+            margin-left:12px;
+            margin-right:12px;
+            float: left;
+        }
+        #yellow{
+            background-color:  #e6b800 ;
+            height: 13px;
+            width: 13px;
+            border-radius: 50%;
+            margin-right:12px;
+            float: left;
+        }
+        #green{
+            background-color: #33cc33 ;
+            height: 13px;
+            width: 13px;
+            border-radius: 50%;
+            float: left;
+        }
+        #code{
+            font-size: 14px;
+            letter-spacing: 1px;
+            padding: 15px;
+            width: 100%;
+            height: 100%;
+            font-family: Arial, Helvetica, sans-serif;
+            color:#e6e6e6;
+            line-height : 1.5 ;
+        }
+        @media screen and (max-width:1200px){
+            div.col-xl-4{
+                text-align: center;
+            }
+        }
+        @media screen and (max-width:992px){
+            #icon, #line, #date{
+                display: none;
+            }
+            #code{
+                width: 100%;
+            }
+        }
+    </style>
 </head>
 <body >
-    <center><h6><p>Mac UI Notepad</p></h6></center>
-    <div id="menu">
-        <button type="button" class="material-icons" style="font-size:36px" data-toggle="modal" data-target="#mymodal" onclick="takeshot()">screenshot</button>
-        <button type="button" class="material-icons" style="font-size:36px" disabled>file_download</button>
-    </div>
-
-    <!-- Starting Modal -->
-    <div class="modal" id="myModal">
-        <div class="modal-dialog">
-            <div class="modal-content">
-                <div class="modal-header">
-                  <h4 class="modal-title">Welcome to Mac UI Notepad.</h4>
-                  <button type="button" class="close" data-dismiss="modal">&times;</button>
-                </div>
-                <div class="modal-body">
-                    <p>Instruction to Use : </p>
-                    <p>You have to type everything manually i.e. Window title, line number and body.</p>
-                    <p>Screenshot can be taken by the first button on the right.</p>
-                    <p>Save your image with .png or .jpg/.jpeg extension.</p>
-                    <p>With Regard <br> Shyam<br><i>"Sam"</i></p>
-                </div>
-                <div class="modal-footer">
-                  <button type="button" class="btn btn-danger" data-dismiss="modal">Close</button>
+<!--Header starts-->
+    <header>
+        <nav class="navbar navbar-expand-lg bg-dark navbar-dark" style="padding-left: 35px;padding-right: 35px;">
+            <div class="container-fluid">
+                <a href="https://shyamkanth.github.io" class="navbar-brand">Shyam Sunder Kanth</a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavbar"><span class="navbar-toggler-icon"></span></button>
+                <div class="collapse navbar-collapse" id="collapsibleNavbar">
+                    <ul class="navbar-nav ms-auto">
+                        <li class="nav-item">
+                            <a href="https://shyamkanth.github.io" class="nav-link" style="margin-right: 30px;">Home</a>
+                        </li>
+                        <li class="nav-item">
+                            <a href="https://shyamkanth.blogspot.com/p/about.html" target="_blank" class="nav-link" style="margin-right: 30px;">About</a>
+                        </li>
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown">Projects</a>
+                            <ul class="dropdown-menu dropdown-menu-end" style="z-index: 10000;" id="projects">
+                              <li><a class="dropdown-item" href="#" target="_blank">Mac UI Notepd</a></li>
+                            </ul>
+                          </li>
+                          <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown">Sites</a>
+                            <ul class="dropdown-menu dropdown-menu-end" style="z-index: 10000;">
+                              <li><a class="dropdown-item" href="https://shyamkanth.github.io">shyamkanth.github.io</a></li>
+                              <li><a class="dropdown-item" href="https://shyamkanth.blogspot.com" target="_blank">shyamkanth.blogspot.com</a></li>
+                              <li><a class="dropdown-item" href="">shyamkanth.wordpress.com<sub> not active</sub></a></li>
+                              <li><a class="dropdown-item" href="">tnmafia.com<sub> not active</sub></a></li>
+                            </ul>
+                          </li>
+                          <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown">More</a>
+                            <ul class="dropdown-menu dropdown-menu-end" style="z-index: 10000;">
+                              <li><a class="dropdown-item" href="https://shyamkanth.blogspot.com" target="_blank">Click here to learn with me.</a></li>
+                              <li><a class="dropdown-item" href="https://shyamkanth.blogspot.com/search/label/Programs" target="_blank">Click here to see all C programs by me</a></li>
+                              <li><a class="dropdown-item" href="#" target="_blank">Click here to view Question library.</a></li>
+                              <li><a class="dropdown-item" href="https://shyamkanth.blogspot.com/index.html" target="_blank">Click here to see all my posts</a></li>
+                            </ul>
+                          </li>
+                    </ul>
                 </div>
             </div>
-        </div>
-    </div>
-
-          <!-- Final Modal -->
-  <div class="modal" id="mymodal">
-    <div class="modal-dialog">
-        <div class="modal-content">
-            <div class="modal-header">
-              <h4 class="modal-title">Snapshot Taken</h4>
-              <button type="button" class="close" data-dismiss="modal">&times;</button>
+        </nav>
+    </header>
+<!--Header ends-->
+<!--Main Body starts-->
+<p class="h2 mt-3" style="text-align: center;">Mac UI Notepad</p>
+<div class="container" style="display: flex; justify-content: center; align-items: center; width: 100%; height: 100vh;">
+    <div id="container-back" style="width: 80%; height:90%; background-color:#161d29; display: flex;justify-content: center;align-items: center;">
+        <div id="main-container"
+        style="background-color:#1f2c40;height: 85%;width: 75%;border-radius: 10px;overflow-y: auto;overflow-x: hidden;">
+            <div id="top-bar" class="sticky-top" style="display: flex; background-color: #e6e6e6;width: 100%;height: 8%;border-top-left-radius: 10px;border-top-right-radius: 10px;text-align: center;align-items: center;">
+                <div id="icon" style="width: 25%;">
+                    <div id="red"></div>
+                    <div id="yellow"></div>
+                    <div id="green"></div>
+                </div>
+                <div id="title" style="width:100%;align-items: center;" onmouseover = "myFunction3()" spellcheck="false">Window Title</div>
+                <div id="date" style="width: 25%;"></div>
+                <script>
+                    var d = new Date();
+                    var date = d.getDate();
+                    var month = d.getMonth() +1;
+                    var year = d.getFullYear();
+                    var dateStr = date + "-" + month + "-" + year;
+                    document.getElementById("date").innerHTML=dateStr;
+                </script>
             </div>
-            <div class="modal-body">
-                <p>Save your image with .png or .jpg/.jpeg extension.</p>
-            </div>
-            <div class="modal-footer">
-              <button type="button" class="btn btn-danger" data-dismiss="modal">Close</button>
+            <div id="content" style="display:flex;">
+                <div id="code" onmouseover = "myFunction()" spellcheck="false">Hello world. Click me to start writing.</div>
             </div>
         </div>
     </div>
 </div>
-
-<div id="back">
-    <div id="main">
-        <div id="child" class="sticky-top">
-            <!--Icons-->
-                <div id="red">
-                </div>
-                <div id="yellow">
-                </div>
-                <div id="green">
-                </div>
-            <!--Window title-->
-                <div id="title">
-                    <b><p id="window-title" onmouseover = "myFunction3()" spellcheck="false">Window Title</p></b>
-                </div>
-        </div>
-  
-    <!--Line number-->
-        <div id="line">
-            <p id="line-no" onmouseover = "myFunction2()" spellcheck="false">1</p>
-        </div>
-    <!--Coding-->
-            <p id="code" onmouseover = "myFunction()" spellcheck="false" >Hello world. Click me to start writing.</p>
-    </div>
+<div class="mb-5" style="display: flex;justify-content: center;">
+    <button class="btn btn-outline-success ps-5 pe-5" onclick="takeshot()">Take Screenshot <sub>will active soon</sub></button>
 </div>
-
-
-
+<!--Main Body ends-->
+<!--Footer starts-->
+<footer class="bg-dark" style="color: white;padding: 20px 50px;">
+    <div class="row">
+        <div class="col-xl-4">
+            <p style="font-size: 25px;">For any query contact me.</p>
+            <a href="mailto:shyamkanth8050@gmail.com"><button class="btn btn-info" style="padding: 10px 100px; color: white;">Contact me</button></a>
+            <p style="margin-top: 88px;">2022 copyright &#169; all right reserved.</p>
+        </div>
+        <div class="col-xl-4">
+            <p style="font-size: 25px;">More from me</p>
+            <ul id="more">
+                <li>
+                    <a href="https://shyamkanth.blogspot.com" target="_blank">Click here to learn with me.</a>
+                </li>
+                <li>
+                    <a href="https://shyamkanth.blogspot.com/search/label/Programs" target="_blank">Click here to see all C programs by me</a>
+                </li>
+                <li>
+                    <a href="#" target="_blank">Click here to view Question library.</a>
+                </li>
+                <li>
+                    <a href="https://shyamkanth.blogspot.com/index.html" target="_blank">Click here to see all my posts</a>
+                </li>
+            </ul>
+        </div>
+        <div class="col-xl-4">
+            <p style="font-size: 25px;">Should we end now :( </p>
+            <p>Felling sad to see you go :( Hope we meet again :)</p>
+            <p style="font-size: 30px;font-family: sans-serif;color: #d6a829;">Thank You !</p> 
+        </div>
+    </div>
+</footer>
+<!--Footer ends-->
 </body>
 </html>
