--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown">Projects</a>
                             <ul class="dropdown-menu dropdown-menu-end" style="z-index: 10000;" id="projects">
-                              <li><a class="dropdown-item" href="#" target="_blank">Mac UI Notepd</a></li>
+                              <li><a class="dropdown-item" href="https://shyamkanth.github.io/Mac-UI-Notepad/" target="_blank">Mac UI Notepd</a></li>
                             </ul>
                           </li>
                           <li class="nav-item dropdown">
