--- a/index.html
+++ b/index.html
@@ -79,6 +79,7 @@
             float: left;
         }
         #code{
+            outline: none;
             font-size: 14px;
             letter-spacing: 1px;
             padding: 15px;
@@ -161,7 +162,7 @@
                     <div id="yellow"></div>
                     <div id="green"></div>
                 </div>
-                <div id="title" style="width:100%;align-items: center;" onmouseover = "myFunction3()" spellcheck="false">Window Title</div>
+                <div id="title" style="width:100%;align-items: center; outline: none;" onmouseover = "myFunction3()" spellcheck="false">Window Title</div>
                 <div id="date" style="width: 25%;"></div>
                 <script>
                     var d = new Date();
