--- a/index.html
+++ b/index.html
@@ -6,31 +6,6 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/html2canvas@1.0.0-rc.5/dist/html2canvas.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/canvas2image@1.0.5/canvas2image.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/canvas2image@1.0.5/canvas2image.js"></script>
-    <script>
-        function strip(html) {
-        var tempDiv = document.createElement("DIV");
-        tempDiv.innerHTML = html;
-        return tempDiv.innerText;
-        }
-        function myFunction() {
-            document.getElementById("code").contentEditable = true;
-        }
-        function myFunction2() {
-            document.getElementById("date").contentEditable = true;
-        }
-        function myFunction3() {
-            document.getElementById("title").contentEditable = true;
-        }
-        /*function takeshot(){
-            html2canvas(document.getElementById("container-back")).then(function(canvas){
-                return Canvas2Image.saveAsPNG(canvas)
-        })
-        }*/
-    </script>
     <style>
         *{
             margin : 0;
@@ -79,6 +54,7 @@
             float: left;
         }
         #code{
+            margin-top: 40px;
             outline: none;
             font-size: 14px;
             letter-spacing: 1px;
@@ -87,7 +63,7 @@
             height: 100%;
             font-family: Arial, Helvetica, sans-serif;
             color:#e6e6e6;
-            line-height : 1.5 ;
+            line-height : 2 ;
         }
         @media screen and (max-width:1200px){
             div.col-xl-4{
@@ -152,11 +128,11 @@
 <!--Header ends-->
 <!--Main Body starts-->
 <p class="h2 mt-3" style="text-align: center;">Mac UI Notepad</p>
-<div class="container" style="display: flex; justify-content: center; align-items: center; width: 100%; height: 100vh;">
+<div class="container" style="position: relative; display: flex; justify-content: center; align-items: center; width: 100%; height: 100vh;">
     <div id="container-back" style="width: 80%; height:90%; background-color:#161d29; display: flex;justify-content: center;align-items: center;">
         <div id="main-container"
-        style="background-color:#1f2c40;height: 85%;width: 75%;border-radius: 10px;overflow-y: auto;overflow-x: hidden;">
-            <div id="top-bar" class="sticky-top" style="display: flex; background-color: #e6e6e6;width: 100%;height: 8%;border-top-left-radius: 10px;border-top-right-radius: 10px;text-align: center;align-items: center;">
+        style="position: relative; background-color:#1f2c40;height: 85%;width: 75%;border-radius: 10px;overflow-y: auto;overflow-x: hidden;">
+            <div id="top-bar" class="sticky-top" style="position: absolute; display: flex; background-color: #e6e6e6;width: 100%;height: 8%;border-top-left-radius: 10px;border-top-right-radius: 10px;text-align: center;align-items: center;">
                 <div id="icon" style="width: 25%;">
                     <div id="red"></div>
                     <div id="yellow"></div>
@@ -180,7 +156,7 @@
     </div>
 </div>
 <div class="mb-5" style="display: flex;justify-content: center;">
-    <button class="btn btn-outline-success ps-5 pe-5" onclick="takeshot()">Take Screenshot <sub>will active soon</sub></button>
+    <button id="screenshot-button" class="btn btn-outline-success ps-5 pe-5">Take Screenshot</button>
 </div>
 <!--Main Body ends-->
 <!--Footer starts-->
@@ -216,5 +192,50 @@
     </div>
 </footer>
 <!--Footer ends-->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/html2canvas@1.0.0-rc.5/dist/html2canvas.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/canvas2image@1.0.5/canvas2image.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/canvas2image@1.0.5/canvas2image.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/0.5.0-beta4/html2canvas.min.js"></script>
+    <script>
+        function strip(html) {
+        var tempDiv = document.createElement("DIV");
+        tempDiv.innerHTML = html;
+        return tempDiv.innerText;
+        }
+        function myFunction() {
+            document.getElementById("code").contentEditable = true;
+        }
+        function myFunction2() {
+            document.getElementById("date").contentEditable = true;
+        }
+        function myFunction3() {
+            document.getElementById("title").contentEditable = true;
+        }
+    </script>
+    <script>
+        var code = document.getElementById("code");
+      
+        code.addEventListener("paste", function(e) {
+          e.preventDefault();
+          var text = e.clipboardData.getData("text/plain");
+          document.execCommand("insertText", false, text);
+          document.execCommand("removeFormat", false, text);
+        });
+      </script>
+    <script>
+            const SCREENSHOTBUTTON = document.getElementById("screenshot-button");
+            const TARGETDIV = document.getElementById("container-back");
+            SCREENSHOTBUTTON.addEventListener('click',function(){console.log("Button clicked");},false)
+            SCREENSHOTBUTTON.addEventListener('click',()=>{
+                html2canvas(TARGETDIV,{devicePixelRatio: 2,allowTaint: true,useCORS: true,scale:2}).then(canvas => {
+                    const screenshot = canvas.toDataURL('image/jpeg');
+                    const link = document.createElement('a');
+                    link.download = 'screenshot.png';
+                    link.href = screenshot;
+                    link.click();
+                });
+            });
+    </script>
 </body>
 </html>
