--- a/index.html
+++ b/index.html
@@ -100,6 +100,7 @@
                             <ul class="dropdown-menu dropdown-menu-end" style="z-index: 10000;" id="projects">
                               <li><a class="dropdown-item" href="https://shyamkanth.github.io/Mac-UI-Notepad/" target="_blank">Mac UI Notepd</a></li>
                               <li><a class="dropdown-item" href="https://shyamkanth.github.io/site-mailer/" target="_blank">Site Mailer</a></li>
+                              <li><a class="dropdown-item" href="https://shyamkanth.github.io/home-banner/" target="_blank">Home Banner</a></li>
                             </ul>
                           </li>
                           <li class="nav-item dropdown">
