--- a/index.html
+++ b/index.html
@@ -99,7 +99,9 @@
                             <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown">Projects</a>
                             <ul class="dropdown-menu dropdown-menu-end" style="z-index: 10000;" id="projects">
                               <li><a class="dropdown-item" href="https://shyamkanth.github.io/Mac-UI-Notepad/" target="_blank">Mac UI Notepd</a></li>
+                                <li><a class="dropdown-item" href="https://github.com/shyamkanth/Journal-website" target="_blank">Journal Website</a></li>
                               <li><a class="dropdown-item" href="https://shyamkanth.github.io/site-mailer/" target="_blank">Site Mailer</a></li>
+                            <li><a class="dropdown-item" href="https://github.com/shyamkanth/calculator-in-c" target="_blank">Multifunctional C calculator<sub>exe</sub></a></li>
                               <li><a class="dropdown-item" href="https://shyamkanth.github.io/home-banner/" target="_blank">Home Banner</a></li>
                             </ul>
                           </li>
@@ -115,10 +117,11 @@
                           <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown">More</a>
                             <ul class="dropdown-menu dropdown-menu-end" style="z-index: 10000;">
+                                <li><a class="dropdown-item" href="https://github.com/shyamkanth/Placements" target="_blank">Click here to Get ready for placement with me.</a></li>
                               <li><a class="dropdown-item" href="https://shyamkanth.blogspot.com" target="_blank">Click here to learn with me.</a></li>
                               <li><a class="dropdown-item" href="https://shyamkanth.blogspot.com/search/label/Programs" target="_blank">Click here to see all C programs by me</a></li>
-                              <li><a class="dropdown-item" href="#" target="_blank">Click here to view Question library.</a></li>
-                              <li><a class="dropdown-item" href="https://shyamkanth.blogspot.com/index.html" target="_blank">Click here to see all my posts</a></li>
+                              <li><a class="dropdown-item" href="https://shyamkanth.blogspot.com/search/label/Questions" target="_blank">Click here to view Question library.</a></li>
+                              <li><a class="dropdown-item" href="https://shyamkanth.blogspot.com/search/label/All-posts" target="_blank">Click here to see all my posts</a></li>
                             </ul>
                           </li>
                     </ul>
